--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               engineering.drivojoy.com
-tagline:             Everyone's private mechanic
-url:                 http://drivojoy.com
+title:               Poole
+tagline:             The Jekyll Butler
+url:                 http://getpoole.com
 paginate:            1
 baseurl:             ""
 
@@ -20,11 +20,11 @@ sass:
 
 # About/contact
 author:
-  name:              Rohith Rajan
-  url:               https://twitter.com/drivojoy
-  email:             rohith@drivojoy.com
+  name:              Mark Otto
+  url:               https://twitter.com/mdo
+  email:             markdotto@gmail.com
 
 # Custom vars
 version:             2.0.0
 github:
-  repo:              https://github.com/drivojoy/drivojoy.github.io
+  repo:              https://github.com/poole/poole
